--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # FFI support
+  ffi: ^2.1.0
+  
+  # HTTP client for downloading models
+  http: ^1.1.0
+  
+  # Path provider for storage
+  path_provider: ^2.1.1
+  
+  # Path manipulation
+  path: ^1.8.3
+  
+  # Permission handler
+  permission_handler: ^11.0.1
+  flutter_tesseract_ocr: ^0.4.30
+  image_picker: ^1.2.1
+  image: ^4.5.4
+  photo_manager: ^3.8.2
+  sqflite: ^2.3.0
+  intl: ^0.19.0
+
+
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +84,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/tessdata/
+    - assets/tessdata_config.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
