--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: snapspend
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -34,19 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  
+
   # FFI support
   ffi: ^2.1.0
-  
+
   # HTTP client for downloading models
   http: ^1.1.0
-  
+
   # Path provider for storage
   path_provider: ^2.1.1
-  
+
   # Path manipulation
   path: ^1.8.3
-  
+
   # Permission handler
   permission_handler: ^11.0.1
   flutter_tesseract_ocr: ^0.4.30
@@ -56,8 +56,6 @@ dependencies:
   sqflite: ^2.3.0
   intl: ^0.19.0
   shared_preferences: ^2.3.3
-
-
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +73,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -88,6 +85,8 @@ flutter:
   assets:
     - assets/tessdata/
     - assets/tessdata_config.json
+    - assets/models/
+    - assets/labels/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
